--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -21,6 +21,9 @@ logging:
     rocks.zipcode: DEBUG
 
 spring:
+  jpa:
+    properties:
+      hibernate.dialect: org.hibernate.dialect.H2Dialect
   devtools:
     restart:
       enabled: true
